src/App.css
@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	max-width: 100%;
}

html {
	font-size: 62.5%;
}

body {
	line-height: 1.2;
	font-family: 'Roboto', sans-serif;
	font-size: 1.5rem;

	color: #404040;
}

h1 {
	font-size: 2.5rem;
	text-transform: uppercase;
	font-weight: 700;
}

h2 {
	font-size: 2rem;
	margin-bottom: 0.5rem;
	text-transform: uppercase;
}

p {
	max-width: 90ch;
}

a {
	font-size: 1.5rem;
	color: #404040;
	text-decoration: none;
	letter-spacing: 0.05rem;
	transition: text-shadow 0.2s;
}

a:hover,
.active {
	text-shadow: 0 0 0.7px #404040, 0 0 0.7px #404040;
}

form {
	display: flex;
	flex-direction: column;

	margin-top: 1rem;
}

input,
textarea {
	margin-bottom: 1rem;
	padding: 1rem;

	border: 1px solid silver;
	border-radius: 0.3rem;

	font-family: inherit;
	outline: none;
}

textarea {
	resize: none;
}

input:focus,
textarea:focus {
	border: 1px solid #5e9ed6;
}

button {
	width: 13rem;
	padding: 1rem;
	margin-top: 0.5rem;

	border: none;
	border-radius: 0.3rem;

	background-color: #404040;
	color: white;
	transition: background-color 0.2s;

	font-family: inherit;
	text-transform: uppercase;

	cursor: pointer;
}

button:hover {
	background-color: #606060;
}

.page-container {
	padding-top: 1rem;
	display: flex;
	justify-content: center;
}

/* Nav Bar Styles */

.nav-bar {
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: 0.75rem 1rem;

	border-bottom: 1px solid silver;
}

.title {
	display: flex;
	flex-wrap: wrap;
	cursor: pointer;
}

.title-bold {
	margin-right: 0.7rem;
}

.title-normal {
	font-weight: normal;
	margin-right: 2rem;
}

.nav-bar-links {
	display: flex;
	justify-content: space-between;
	width: 30rem;
	margin: 0 2rem;

	font-size: 1.8rem;
}

@media screen and (max-width: 1040px) {
	.nav-bar {
		flex-direction: column;
	}

	.title {
		align-self: flex-start;
	}

	.nav-bar-links {
		align-self: flex-end;
		margin-top: 0.5rem;
	}
}

@media screen and (max-width: 420px) {
	.nav-bar-links {
		align-self: center;
		margin: 0.5rem 0 0;
	}
}

@media screen and (max-width: 380px) {
	h1 {
		font-size: 2.4rem;
	}
}

@media screen and (max-width: 367px) {
	h1 {
		font-size: 2.3rem;
	}
}

@media screen and (max-width: 352px) {
	h1 {
		font-size: 2.2rem;
	}
}

@media screen and (max-width: 340px) {
	h1 {
		font-size: 2.1rem;
	}

	h2 {
		font-size: 1.8rem;
	}
}

@media screen and (max-width: 327px) {
	h1 {
		font-size: 2rem;
	}
}

/* Landing Page Styles */

.landing-page {
	display: flex;
	justify-content: space-around;
	align-items: center;
	flex-wrap: wrap;
}

.landing-image {
	width: 30rem;
	height: 30rem;
	margin: 0 2rem 1rem;

	background-image: url(/images/picture.jpg);
	background-size: cover;

	border-radius: 0.3rem;
}

.landing-text {
	padding: 0 1rem;
}

@media screen and (max-width: 800px) {
	.landing-image {
		margin: 0 0 1rem;
	}
}

@media screen and (max-width: 325px) {
	.landing-text h2 {
		display: none;
	}
}

/* Skills Page Styles */

.skills-page {
	max-width: 94%;
	margin: 0 auto;
}

.skills-content {
	display: flex;
	flex-direction: column;
}

.skills-block {
	margin-top: 1rem;
}

.skills-categories {
	display: flex;
	overflow-x: auto;
}

.skill-category {
	margin: 0.5rem 3rem 0 0;
	flex-shrink: 0;
}

.tech-icon {
	color: #404040;
	margin-right: 0.5rem;
}

/* Contact Page Styles */

.contact-page {
	padding: 0 1rem 0;
}

/* Footer Styles */

.footer {
	position: absolute;
	bottom: 0;
	right: 0;
	width: 32rem;

	padding: 1.5rem 3rem;

	display: flex;
	justify-content: space-between;
}

.icon {
	color: #404040;
	transition: color 0.2s;
	cursor: pointer;
}

.icon:hover {
	color: #606060;
}

@media screen and (max-width: 420px) {
	.footer {
		left: 0;
		right: 0;
		margin: auto;
	}
}

/* Dark Mode */

.dark-mode {
	background-color: #404040;
	color: whitesmoke;
}

.dark-mode a,
.dark-mode .icon {
	color: whitesmoke;
}

.dark-mode a:hover,
.dark-mode .active {
	text-shadow: 0 0 1px whitesmoke, 0 0 1px whitesmoke;
}

